two-tier/main.tf
##create a VPC
resource "aws_vpc" "tf_vpc" {
  cidr_block = "20.0.0.0/16"
}

##create an igw for subnet to access outside world
resource "aws_internet_gateway" "tf_igw"{
  vpc_id = "${aws_vpc.tf_vpc.id}"
}

##grant the vpc internet access on it's main route table
resource "aws_route" "tf_internet_access" {
  route_table_id = "${aws_vpc.tf_vpc.main_route_table_id}"
  destination_cidr_block = "0.0.0.0/0"
  gateway_id = "${aws_internet_gateway.tf_igw.id}"
}

resource "aws_subnet" "tf_sub" {
  vpc_id = "${aws_vpc.tf_vpc.id}"
  cidr_block = "20.0.1.0/24"
  map_public_ip_on_launch = true
}

# A security group for the ELB so it is accessible via the web
resource "aws_security_group" "tf_sg" {
  name        = "t2_sg_elb"
  description = "Used in the terraform"
  vpc_id      = "${aws_vpc.tf_vpc.id}"

  # HTTP access from anywhere
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # outbound internet access
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# Our default security group to access
# the instances over SSH and HTTP
resource "aws_security_group" "tf_sg_ec2" {
  name        = "t2_sg_ec2"
  description = "Used in the terraform"
  vpc_id      = "${aws_vpc.tf_vpc.id}"

  # SSH access from anywhere
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # HTTP access from the VPC
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["20.0.0.0/16"]
  }

  # outbound internet access
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_elb" "tf_elb" {
  name = "t2-tf-elb"

  subnets         = ["${aws_subnet.tf_sub.id}"]
  security_groups = ["${aws_security_group.tf_sg.id}"]
  instances       = ["${aws_instance.tf_ec2.id}"]

  listener {
    instance_port     = 80
    instance_protocol = "http"
    lb_port           = 80
    lb_protocol       = "http"
  }
}

resource "aws_key_pair" "auth" {
  key_name   = "${var.key_name}"
  public_key = "${file(var.public_key_path)}"
}

resource "aws_instance" "tf_ec2" {
  # The connection block tells our provisioner how to
  # communicate with the resource (instance)
  connection {
    # The default username for our AMI
    type = "ssh"
    user = "ubuntu"
    host = "${self.public_ip}"
    private_key = file("~/.ssh/id_rsa")
    # The connection will use the local SSH agent for authentication.
  }

  instance_type = "t2.micro"

  # Lookup the correct AMI based on the region
  # we specified
  ami = "${lookup(var.aws_amis, var.aws_region)}"

  # The name of our SSH keypair we created above.
  key_name = "${aws_key_pair.auth.id}"

  # Our Security group to allow HTTP and SSH access
  vpc_security_group_ids = ["${aws_security_group.tf_sg_ec2.id}"]

  # We're going to launch into the same subnet as our ELB. In a production
  # environment it's more common to have a separate private subnet for
  # backend instances.
  subnet_id = "${aws_subnet.tf_sub.id}"

  # We run a remote provisioner on the instance after creating it.
  # In this case, we just install nginx and start it. By default,
  # this should be on port 80
  provisioner "remote-exec" {
    inline = [
      "sudo apt-get -y update",
      "sudo apt-get -y install nginx",
      "sudo service nginx start",
    ]
  }
}
